# fastapi-pubsub

./: Makefile  README.md  pubsub.py  pyproject.toml
app/: app.py
